--- a/thuan/index-home.html
+++ b/thuan/index-home.html
@@ -34,7 +34,7 @@
                 <ul>
                     <li><a href="./index-home.html">Home</a></li>
                     <li><a href="#">Shop</a></li>
-                    <li><a href="./index-catalog.html">Product</a></li>
+                    <li><a href="./catalog.html">Product</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </nav>
@@ -68,7 +68,7 @@
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
                         <li><a href="#">Shop</a></li>
-                        <li><a href="./index-catalog.html">Product</a></li>
+                        <li><a href="./catalog.html">Product</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
