--- a/thuan/catalog.html
+++ b/thuan/catalog.html
@@ -35,7 +35,7 @@
                 <ul>
                     <li><a href="./index-home.html">Home</a></li>
                     <li><a href="#">Shop</a></li>
-                    <li><a href="./index-catalog.html">Product</a></li>
+                    <li><a href="./catalog.html">Product</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </nav>
