--- a/thuan/catalog.html
+++ b/thuan/catalog.html
@@ -33,7 +33,7 @@
             </form>
             <nav>
                 <ul>
-                    <li><a href="./index-home.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#">Shop</a></li>
                     <li><a href="./catalog.html">Product</a></li>
                     <li><a href="#">Contacts</a></li>
@@ -67,7 +67,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="./index-home.html">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="#">Shop</a></li>
                         <li><a href="#" class="active">Product</a></li>
                         <li><a href="#">Contact Us</a></li>
@@ -91,7 +91,7 @@
     <!-- BREADCRUMS Chairs & Benches-->
     <section id="breadCrums" class="container">
         <div class="breadCrums">
-            <span><a href="./index-home.html">Home</a></span>
+            <span><a href="./index.html">Home</a></span>
             <img src="./assets/images/ic-arrow.svg" alt="ic-arrow">
             <span>Chairs & Benches</span>
         </div>
