--- a/thuan/index.html
+++ b/thuan/index.html
@@ -32,7 +32,7 @@
             </form>
             <nav>
                 <ul>
-                    <li><a href="./index-home.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#">Shop</a></li>
                     <li><a href="./catalog.html">Product</a></li>
                     <li><a href="#">Contacts</a></li>
