fixed footer hyperlink

--- a/thuan/catalog.html
+++ b/thuan/catalog.html
@@ -301,9 +301,9 @@
             </div>
             <div class="right-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#">Shop</a></li>
-                    <li><a href="#">Product</a></li>
+                    <li><a href="./catalog.html">Product</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </div>
